本地更改：合并前保存

--- a/关于我们.1/小组介绍.1.html
+++ b/关于我们.1/小组介绍.1.html
@@ -41,7 +41,7 @@
         </div>
         <div class="frame-down">
             <div class="picture picture-4">
-                <a href="./杨一诺/个人介绍网页/yyn介绍.html">
+                <a href="./杨一诺/yyn介绍.html">
                     <img src="./image/4.jpg" alt="">
                 </a>
                 <p>杨一诺</p>
