--- a/index1.html
+++ b/index1.html
@@ -32,7 +32,7 @@
             <button class="ghoul-btn btn-blood btn-login tentacle-border py-6 px-4 text-lg font-semibold transition-all duration-300 hover:glow-effect">
                 <div class="tentacle w-1/3 bg-darkblood/50 top-0 left-0"></div>
                 <i class="icon icon-sign-in mr-3"></i>
-                <a href="game.html">开始游戏</a>
+                <a href="video1.html">开始游戏</a>
             </button>
             
             <!-- 游戏介绍按钮 -->
